[package]
name = "poe-budget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
governor = { version = "0.6", default-features = false, features = ["std"] }
isahc = { version = "1.7", features = ["json"] }
ron = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde-human-readable"] }
